# love-director

./: .gitignore  LICENSE  README.md  README_EN.md  SKILL.md  x-thread.md
.claude-plugin/: plugin.json
data/: stats-baseline.json
docs/: architecture.md
engine/: README.md  cli.py  pyproject.toml  requirements.txt  test_run.py
engine/src/: __init__.py  director.py
engine/src/analysis/: chat_analyzer.py  probability_engine.py  profile_engine.py
engine/src/data/: store.py
engine/src/phases/: decision_tree.py  phase_manager.py
engine/src/plugins/: base.py
engine/src/plugins/data_import/: manual.py  weflow.py
engine/test_data/: chat1.txt
examples/demo-session/: README.md
skill/references/: dating-philosophy-probes.md  director-script-methodology.md  disclaimer-language.md  external-tools-guide.md  research-base.md
